sdm660-common: powerhint: Remove permission denial log errors
Since libperfmgr starts as class HAL, we cannot reset some power hints
on init due to permission granting times. The following nodes can be
changed only after boot complete:

W libperfmgr: Failed to write to node: /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_trigger_count with value: 3, fd: -1
W libperfmgr: Failed to write to node: /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hist_memory with value: 20, fd: -1
W libperfmgr: Failed to write to node: /sys/class/devfreq/soc:qcom,cpubw/min_freq with value: 381, fd: -1

Change-Id: I5e8c7f8dbf9cfed407af6722b45d36e4b95ebf79
Signed-off-by: iusmac <iusico.maxim@libero.it>
Signed-off-by: SKetU-l <sketu@donot.care>
Signed-off-by: dotkit <ewprjkt@proton.me>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -228,3 +228,11 @@ on property:sys.boot_completed=1
 
     # STOP EATING MY BATTERY AFTER 100H OF UPTIME FUCK YOU
     stop statsd
+
+on property:sys.boot_completed=1
+    restart time_daemon
+
+    # Defaults for power hints
+    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_trigger_count 3
+    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hist_memory 20
+    write /sys/class/devfreq/soc:qcom,cpubw/min_freq 381
