--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -162,6 +162,9 @@ on early-boot
 on boot
     start vendor.rmt_storage
 
+    # default country code
+    setprop ro.boot.wificountrycode 00
+
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
