--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -16,6 +16,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
     package="org.lineageos.settings.doze"
     android:sharedUserId="android.uid.system"
     android:versionCode="1"
@@ -29,6 +30,11 @@
     <application
         android:label="@string/device_settings_app_name"
         android:persistent="true">
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:replace="android:authorities"/>
 
         <receiver android:name=".BootCompletedReceiver"
             android:exported="false">
