sdm660-common: Fix build error

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -177,5 +177,6 @@ service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
      user root
      group system wakelock
 
+on property:sys.boot_completed=1
     # STOP EATING MY BATTERY AFTER 100H OF UPTIME FUCK YOU
     stop statsd
