--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -410,4 +410,4 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/kgsl/kgsl-3d0    force_clk_on             0664    root  system
 /sys/class/kgsl/kgsl-3d0    bus_split                0664    root  system
 # Charger
-/sys/class/power_supply/battery  input_suspend              0660    system  system
+/sys/class/power_supply/battery  charging_enabled              0660    system  system
