sdm660-common: rootdir: regenerate init files * drop unused * fix typos & any fixes * update from CLO tag LA.UM.12.2.1.r1-03700-sdm660.0

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -69,11 +69,7 @@ subsystem mem_buf_vm
 /dev/ipa_adpl             0660   system     oem_2905
 /dev/synx_device          0660   root       camera
 /dev/hab                  0666   system     system
-/dev/hgsl                 0666   system     system
 /dev/iio:device*          0664   system     system
-
-#permissions for UFS RPMB BSG device node
-/dev/0:0:0:49476          0600   system     system
 
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
@@ -171,7 +167,6 @@ subsystem mem_buf_vm
 /dev/adsprpc-smd-secure   0644   system     system
 /dev/system_health_monitor 0644  radio      system
 /dev/mdss_rotator         0664   system     system
-/dev/cpu_dma_latency      0660   system     system
 
 #QDSS
 /dev/byte-cntr            0660   system    oem_2902
@@ -193,7 +188,6 @@ subsystem mem_buf_vm
 /sys/devices/platform/soc/a000000.qcom,wcnss-wlan/net/p2p0/queues/rx-* rps_cpus            0660   system     system
 /sys/devices/platform/soc/*.qcom,icnss/net/wlan*/queues/rx-* rps_cpus             0660   system     system
 /sys/devices/platform/soc/1c00000.qcom,pcie/pci0000:00/0000:00:00.0/0000:01:00.0/net/wlan*/queues/rx-* rps_cpus      0660   system     system
-/sys/devices/platform/soc/17a10040.qcom,wcn6750/net/wlan*/queues/rx-* rps_cpus    0660   system     system
 /dev/spidev0.0            0660   system     audio
 /dev/i2c-7                0660   system     audio
 /dev/msm_camera/*         0660   system     camera
@@ -251,8 +245,6 @@ subsystem mem_buf_vm
 /dev/i2c-5                0660   media       media
 /dev/avtimer              0660   system     audio
 /dev/spidev2.0            0660   system     audio
-/dev/spidev7.1            0660   system     system
-/dev/spidev22.0           0660   system     audio
 /dev/msm_adsp_sleepmon    0660   system     audio
 
 # DVB devices
@@ -355,12 +347,20 @@ subsystem mem_buf_vm
 /dev/kmsg                                               0620   root       system
 
 # LED class devices
-/sys/class/leds/red                       breath          0644    system    system
-/sys/class/leds/red                       brightness      0644    system    system
-/sys/class/leds/green                     breath          0644    system    system
-/sys/class/leds/green                     brightness      0644    system    system
-/sys/class/leds/lcd-backlight             brightness      0644    system    system
-/sys/class/backlight/panel0-backlight     brightness      0644    system    system
+/sys/class/leds/red      delay_on     0640    system    system
+/sys/class/leds/red      delay_off    0640    system    system
+/sys/class/leds/red      breath       0640    system    system
+/sys/class/leds/red      trigger      0640    system    system
+/sys/class/leds/green    delay_on     0640    system    system
+/sys/class/leds/green    delay_off    0640    system    system
+/sys/class/leds/green    breath       0640    system    system
+/sys/class/leds/green    trigger      0640    system    system
+/sys/class/leds/blue     delay_on     0640    system    system
+/sys/class/leds/blue     delay_off    0640    system    system
+/sys/class/leds/blue     breath       0640    system    system
+/sys/class/leds/blue     trigger      0640    system    system
+/sys/class/leds/red      blink        0640    system    system
+/sys/class/leds/green    blink        0640    system    system
 
 # NPU device
 /dev/msm_npu             0644   system     system
@@ -374,9 +374,6 @@ subsystem mem_buf_vm
 /sys/devices/system/memory/memory* state    0660 system system
 
 /sys/devices/virtual/hdcp/msm_hdcp  min_level_change 0664    system  graphics
-
-# KGSL
-/sys/class/kgsl/kgsl-3d0    perfcounter              0660    root    shell
 
 # sys-fs display
 /sys/class/graphics/fb*     hpd                      0664    system  graphics
@@ -407,7 +404,6 @@ subsystem mem_buf_vm
 /sys/class/graphics/fb0     modes                    0664    system  graphics
 /sys/class/graphics/fb0     mode                     0664    system  graphics
 /sys/class/graphics/fb0     msm_cmd_autorefresh_en   0664    system  graphics
-*/
 
 /sys/devices/platform/soc/ae00000.qcom,mdss_mdp power/control 0664 system graphics
 
