--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -98,11 +98,6 @@ on init
     write /dev/cpuset/application/cpus 0-7
 
     # Setup permission for Power HAL
-    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
-    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
-    chown system system /sys/class/kgsl/kgsl-3d0/force_rail_on
-    chown system system /sys/class/kgsl/kgsl-3d0/force_clk_on
-    chown system system /sys/class/kgsl/kgsl-3d0/idle_timer
     chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
     chown system system /sys/class/devfreq/soc:qcom,cpu-cpu-ddr-bw/max_freq
     chown system system /sys/class/devfreq/soc:qcom,cpu-cpu-ddr-bw/min_freq
@@ -116,11 +111,6 @@ on init
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
 
-    chmod 0664 /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
-    chmod 0664 /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
-    chmod 0664 /sys/class/kgsl/kgsl-3d0/force_rail_on
-    chmod 0664 /sys/class/kgsl/kgsl-3d0/force_clk_on
-    chmod 0664 /sys/class/kgsl/kgsl-3d0/idle_timer
     chmod 0664 /sys/class/devfreq/soc:qcom,gpubw/min_freq
     chmod 0664 /sys/class/devfreq/soc:qcom,cpu-cpu-ddr-bw/max_freq
     chmod 0664 /sys/class/devfreq/soc:qcom,cpu-cpu-ddr-bw/min_freq
@@ -159,15 +149,9 @@ on late-fs
     mount_all --late
 
 on post-fs
+    write /dev/ipa 1
     start vendor.qseecomd
     wait_for_prop vendor.sys.listeners.registered true
-    write /dev/ipa 1
-
-on post-fs-data
-    mkdir /data/vendor/tombstones/modem 0771 system system
-    mkdir /data/vendor/tombstones/lpass 0771 system system
-    mkdir /data/vendor/tombstones/wcnss 0771 system system
-    mkdir /data/vendor/tombstones/dsps 0771 system system
 
 on early-boot
     chown system system /mnt/vendor/persist/sensors
@@ -176,43 +160,7 @@ on early-boot
     chmod 0664 /mnt/vendor/persist/sensors/sensors_settings
 
 on boot
-    start rmt_storage
-
-    # Thermal
-    chmod 0664 /sys/class/thermal/thermal_message/sconfig
-    chown system system /sys/class/thermal/thermal_message/sconfig
-    chmod 0666 /sys/class/thermal/thermal_message/temp_state
-    chown system system /sys/class/thermal/thermal_message/temp_state
-    
-    # Cpusets
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/foreground/cpus 0-7
-    write /dev/cpuset/foreground/boost/cpus 0-7
-    write /dev/cpuset/background/cpus 0-7
-    write /dev/cpuset/system-background/cpus 0-7
-    ####Regionalization config and prop files####
-    chmod 0644 /persist/speccfg/spec
-    chmod 0644 /persist/speccfg/devicetype
-    chmod 0644 /persist/speccfg/mbnversion
-    chmod 0644 /persist/speccfg/.not_triggered
-    chmod 0644 /persist/speccfg/vendor_ro.prop
-    chmod 0644 /persist/speccfg/vendor_persist.prop
-    chmod 0644 /persist/speccfg/submask
-    chmod 0644 /persist/speccfg/partition
-    chown system system /persist/speccfg/spec
-    chown system system /persist/speccfg/devicetype
-    chown system system /persist/speccfg/mbnversion
-    chown system system /persist/speccfg/.not_triggered
-    chown system system /persist/speccfg/vendor_ro.prop
-    chown system system /persist/speccfg/vendor_persist.prop
-    chown system system /persist/speccfg/submask
-    chown system system /persist/speccfg/partition
-    
-    # Turn on sleep modes
-    write /sys/module/lpm_levels/parameters/sleep_disabled 0
-
-#Create folder dump yuv images while debugging
-    mkdir /data/vendor/camera 0770 camera camera
+    start vendor.rmt_storage
 
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
